# code_and_pseudocode_translator

./: .gitignore  API.md  BUILD_GUIDE.md  COMPILACION_GUIA.md  Cargo.toml  DOCUMENTATION_INDEX.md  EXAMPLES.md  INSTALL_RUST.md  MULTIPLATFORM_BUILD.md  MULTIPLATFORM_RELEASE.md  PLATFORMS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_TEMPLATE.md  ROADMAP.md  build-android.ps1  build-android.sh  build.rs  compile-multiplatform.ps1  lineas_totales_proyecto.c  quickstart.ps1
.cargo/: android-config.toml  config.toml
.github/workflows/: release.yml
android/: README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/urv/codetranslator/: MainActivity.kt
android/src/main/res/layout/: activity_main.xml
android/src/main/res/values/: strings.xml
ios/: README.md
ios/include/: code_translator.h
src/: android_ffi.rs  commands.rs  ios_ffi.rs  lib.rs  main.rs
src/cli/: mod.rs
src/core/: mod.rs
src/core/ast/: mod.rs
src/core/lexer/: mod.rs
src/core/parser/: mod.rs
src/core/transpiler/: mod.rs
tests/: bateria_traduccion.rs
